fix the bug